GET /places/mine api init
